Tests/Core/AWSClientRuntimeTests/Protocols/RestXML/Models/Errors/GreetingWithErrorsOutputError.swift
//
// Copyright Amazon.com Inc. or its affiliates.
// All Rights Reserved.
//
// SPDX-License-Identifier: Apache-2.0
//

// Code generated by smithy-swift-codegen. DO NOT EDIT!
import AWSClientRuntime
import ClientRuntime

public enum GreetingWithErrorsOutputError {
    case complexXMLError(ComplexXMLError)
    case invalidGreeting(InvalidGreeting)
    case unknown(UnknownAWSHttpServiceError)
}
